--- a/vadginger-alpha/app/views/Statics/activitiesStart.html
+++ b/vadginger-alpha/app/views/Statics/activitiesStart.html
@@ -1,8 +1,8 @@
 #{extends 'main.html' /}
 <div class="statics">
-<h2>Home</h2>
+<h2>Activiteiten: Startpagina</h2>
 <div class="content">
-  <p>Nog te schrijven</p>
-
+<p>Het hoofdblad Activiteiten vormt de kern van de Gingerregistratie. Via de link link “Nieuwe activiteit” kan je preventieactiviteiten in de databank invoeren. Het invullen wijst zich vanzelf uit. Er moet een lijst aan variabelen worden ingevuld aan de hand van vaste categorieën. Elke variabele wordt aan de hand van een vraag of omschrijving voldoende duidelijk ingeleid. Afhankelijk van de keuze van antwoordcategorieën kunnen zich nieuwe variabelen openen. Eens het hele activiteitenscherm is ingevuld, klik je onderaan op de knop "Opslaan". Zo wordt de geregistreerde activiteit in het databestand weggeschreven.</p>
+<p>Daarnaast heb je nog de schermen “Mijn activiteiten” en “Filter activiteiten”. In de eerste staan alle reeds door de registrator in de databank ingevoerde activiteiten. Via “Filter activiteiten” kan een selectie gemaakt worden op basis van relevante kenmerken (bv. op basis van één bepaalde sector).</p>
 </div>
 </div>
