--- a/vadginger-alpha/app/views/Statics/index.html
+++ b/vadginger-alpha/app/views/Statics/index.html
@@ -1,12 +1,11 @@
 #{extends 'main.html' /}
 <div class="statics">
-<h2>Home</h2>
 <div class="content">
-  <p>GinGer is een gebruiksvriendelijk registratieprogramma voor activiteiten die kaderen in alcohol- en drugpreventie in de Vlaamse Gemeenschap.</p>
-  <p>Opdracht: organiseren van een registratiesysteem dat gegevens verzamelt over de activiteiten van drugpreventiewerkers.</p>
-  <p>Het registratiesysteem waarvan sprake is dus GinGer. GinGer bestaat als registratieprogramma al sinds 1996, met deze online-versie als laatste ontwikkeling (sinds 2008). Elk jaar nemen meer dan 60 preventiewerkers deel aan de GinGerregistratie. Wie ge&iuml;nteresseerd is in deelname aan de GinGerregistratie kan met mij contact opnemen op onderstaand e-mailadres.</p>
-  <p>Johan Rosiers, VAD</p>
-  <a href="mailto:info@vadginger.be">info@vadginger.be</a>
+<p>Ginger is een gebruiksvriendelijk registratieprogramma voor activiteiten die kaderen in alcohol- en drugpreventie in de Vlaamse Gemeenschap. De Vereniging voor Alcohol- en andere Drugproblemen vzw (VAD) ontwikkelt en beheert het programma in opdracht van de Vlaamse overheid. In de convenant die VAD heeft afgesloten met de Vlaamse overheid staat onder resultaatsgebied “evaluatie van interventies” vermeld:</p>
+<p><b>Opdracht: organiseren van een registratiesysteem dat gegevens verzamelt over de activiteiten van drugpreventiewerkers.</b></p>
+<p>Het registratiesysteem waarvan sprake is dus Ginger. Ginger bestaat als registratieprogramma al sinds 1996, met deze online-versie als laatste ontwikkeling (sinds 2009 in gebruik). Elk jaar nemen meer dan 80 preventiewerkers deel aan de Gingerregistratie.</p>
+<p>Geïnteresseerd in deelname aan de Gingerregistratie? Neem contact op met</p>
+<p>Johan Rosiers<br/>VAD<br/><a href="mailto:info@vadginger.be">info@vadginger.be</a></p>
 
 </div>
 </div>
