--- a/vadginger-alpha/app/views/Statics/tips.html
+++ b/vadginger-alpha/app/views/Statics/tips.html
@@ -2,11 +2,8 @@
 <div class="statics">
 <h2>HANDLEIDING EN NUTTIGE TIPS</h2>
 <div class="content">
-  <p>Gebruik F11 voor volledig scherm. Opnieuw F11 brengt normaal scherm terug.</p>
-  <p>Opgelet met de BACKSPACE toets. Op het internet wordt deze gebruikt om een een pagina terug te gaan. Dit kan betekenen dat je hetgeen je juist hebt ingegeven verliest als het niet bewaard is.</p>
-  <p>Deze website gebruikt cookies. Uw browser moet ze toestaan om vlot met deze applicatie te kunnen werken. De cookies die VADGinGer gebruikt zijn volledig onschuldig en onschadelijk. Hoe je cookies kunt toestaan kan je op de link hieronder nagaan: http://www.google.com/cookies.html.</p>
-  <p>Het gebruik van de ENTER-toets beter vermijden.</p>
-  <p>Om naar het einde van een internetpagina te gaan kan je de END toets gebruiken. Op sommige pagina's staat de knoppen (Bewaren, Volgende, Toevoegen, ...) helemaal onderaan. Omdat het gebruik van de scrollbar niet altijd even handig is kan je beter de END toets gebruiken. Let wel op dat de focus niet op een lijst staat. Klik desnoods eerst ergens op een blanco plaats en druk dan op END. </p>
+<p>Opgelet met de BACKSPACE toets. Op het internet wordt deze gebruikt om een een pagina terug te gaan. Dit kan betekenen dat je hetgeen je juist hebt ingegeven verliest als het niet bewaard is.</p>
+<p>Om naar het einde van een internetpagina te gaan kan je de END toets gebruiken. Op sommige pagina's staat de knoppen (Opslaan, Terug, Filter uitvoeren, …) helemaal onderaan. Omdat het gebruik van de scrollbar niet altijd even handig is kan je beter de END toets gebruiken. Let wel op dat de focus niet op een lijst staat. Klik desnoods eerst ergens op een blanco plaats en druk dan op END.</p>
 
 </div>
 </div>
