added changes from jef

--- a/vadginger-alpha/app/views/Activities/searchForm.html
+++ b/vadginger-alpha/app/views/Activities/searchForm.html
@@ -151,6 +151,7 @@
   		$("#locationSelect").change(function() {
   			$("#hiddenLoc").empty();
   			var selectedLocation = $("#locationSelect option:selected").val();
+  			 //var listLocations = "/suborganizations/list?id="+selectedOrganization+"&centrumId=${centrumId.id}";
   			var listLocations = #{jsAction @Locationss.list(':id')/}
 			$("#hiddenLoc").load(listLocations({id: selectedLocation}), function(){});
   		});
