--- a/vadginger-alpha/app/views/VadGingerUsers/create.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/create.html
@@ -5,10 +5,8 @@
 <div class="entity">
 #{form @VadGingerUsers.save(), id:'createForm'}
 	#{include 'VadGingerUsers/_form.html' /}
-  <!-- <button class="submit ui-corner-all submitbutton"">Opslaan</button> -->
 <!-- ======= -->
-  <button class="submit ui-corner-all submitbutton">Opslaan</button>
-<!-- >>>>>>> 92d6904c9d379ea72ea913135e279d40ba2d347f -->
+  <input type="submit" class="submit ui-corner-all" value="Opslaan" />
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
