forking for suicide

--- a/vadginger-alpha/app/views/Activities/show.html
+++ b/vadginger-alpha/app/views/Activities/show.html
@@ -173,6 +173,18 @@
 		</span>
 		
 	</div>
+
+
+
+	<div class="row">
+		<span class="elem">
+			Standaardevaluatieformulier:
+		</span>
+		<span class="value">
+      ${entity.defForm}
+		</span>
+
+	</div>
   
   <div class="row">
   <span class="elem">
