--- a/vadginger-alpha/app/views/Activities/_form.html
+++ b/vadginger-alpha/app/views/Activities/_form.html
@@ -478,6 +478,18 @@
     </div>
     <span class="error">${errors.forKey('entity.reported')}</span>
   </div>
+  <div class="row">
+    <div class="label">Werd het standaardevaluatieformulier gebruikt?</div>
+    <div class="field">
+      Ja <input type="radio" name="entity.defForm" value="true"
+      ${entity?.defForm ? 'checked':''}
+      />
+      Neen <input type="radio" name="entity.defForm" value="false"
+      ${!entity?.defForm ? 'checked':''}
+      />
+    </div>
+    <span class="error">${errors.forKey('entity.defForm')}</span>
+  </div>
 </div>
 
 
@@ -515,9 +527,10 @@
           if ($("#Sector input:checked").length == 0) {
               $("#Sector input:hidden:first").require("Gelieve minstens één sector aan te vinken");
           }
-          var test = $("#TheItem input:hidden:first");
-          if ($("#TheItem input:checked").length == 0) {
-              $("#TheItem input:hidden:first").require("Gelieve minstens één item aan te vinken");
+          if($("#TheItem").length){
+            if ($("#TheItem input:checked").length == 0) {
+                $("#TheItem input:hidden:first").require("Gelieve minstens één item aan te vinken");
+            }
           }
           if ($("#Materiaal input:checked").length == 0) {
               $("#Materiaal input:hidden:first").require("Gelieve minstens één gebruikt materiaal aan te vinken");
