--- a/vadginger-alpha/app/views/Organisatiess/_form.html
+++ b/vadginger-alpha/app/views/Organisatiess/_form.html
@@ -124,7 +124,7 @@
 <script type="text/javascript">
     $(function() {
         $("form").validity(function() {
-          $(":text").require();
+          $("#Naam").require();
         });
     });
 </script>
