--- a/vadginger-alpha/public/stylesheets/main.css
+++ b/vadginger-alpha/public/stylesheets/main.css
@@ -287,6 +287,10 @@ div.entity .bigSearch{
   margin: -14px 0 0 50px;
 }
 
+.fSuccess{
+  color: #FFA500;
+}
+
 
 /* *********** VALIDATION ************ */
 
