--- a/vadginger-alpha/app/views/Activities/_edit_form.html
+++ b/vadginger-alpha/app/views/Activities/_edit_form.html
@@ -511,53 +511,16 @@
 <div class="row" id="evaluvated" ${entity.evaluvated ? '': 'style="display: none"'.raw()}>
 
   <div class="row">
-    <div class="label">Hoe is de activiteit ge&euml;valueerd?</div>
-    <div class="field">
-      %{ models.EvaluvationType.all().fetch().sort{ it.toString() }.each() { }%
-      %{
-      selected = false;
-      for(models.ActivityEvaluvators ae: entity.activityEvaluvatorsId) {
-      		if (ae.evalTypeId?.id == it?.id) {
-      		selected = true;
-      		}
-      }
-      }%
-      <input id="${it?.id}" name="eval_type_${it?.id}" type="checkbox" ${selected?'checked'.raw(): ''}>
-      <label class="choice" for="eval_type_${it?.id}">${it?.evalType}</label>
-      <!-- <option value="${it?.id}" ${selected ? 'selected'.raw() : ''}>${it}</option> -->
-      %{ } }%
-    </div>
-    <span class="error">${errors.forKey('entity.evaluvated')}</span>
-  </div>
-  <div class="row">
-    <div class="label">Wie heeft de activiteit ge&euml;valueerd?</div>
-    <div class="field">
-      %{ models.Evaluvators.all().fetch().sort{ it.toString() }.each() { }%
-      %{
-       selected = false;
-      for(models.ActivityEvaluvators ae: entity.activityEvaluvatorsId) {
-      		if (ae.evaluvatorsId?.id == it?.id) {
-      		selected = true;
-      		}
-}      }%
-      <input id="${it?.id}" name="evaluvators" type="radio" value="${it?.id}" ${selected?'checked'.raw(): ''}>${it}&nbsp;&nbsp;&nbsp;
-      <!-- <span class="field" id="${it?.id}cont"></span><br> -->
-      <!-- <option value="${it?.id}" ${selected ? 'selected'.raw() : ''}>${it}</option> -->
-      %{ } }%
-    </div>
-    <span class="error">${errors.forKey('entity.evaluvated')}</span>
-  </div>
-  <div class="row">
-    <div class="label">Is er een verslag gemaakt?</div>
+    <div class="label">Werd het standaardevaluatieformulier gebruikt?</div>
     <div class="field">
 
-      Ja <input type="radio" name="entity.reported" value="true"
-      ${entity?.reported ? 'checked':''}
+      Ja <input type="radio" name="entity.defForm" value="true"
+      ${entity?.defForm ? 'checked':''}
       />
-      Neen <input type="radio" name="entity.reported" value="false"
-      ${!entity?.reported ? 'checked':''}
+      Neen <input type="radio" name="entity.defForm" value="false"
+      ${!entity?.defForm ? 'checked':''}
       />
     </div>
-    <span class="error">${errors.forKey('entity.reported')}</span>
+    <span class="error">${errors.forKey('entity.defForm')}</span>
   </div>
 </div>
