--- a/vadginger-alpha/app/views/Organisatiess/_form.html
+++ b/vadginger-alpha/app/views/Organisatiess/_form.html
@@ -18,7 +18,7 @@
 </div>
 
  <div class="row">
-  <div class="label">Afhankelijk van</div>
+  <div class="label">Indien suborganisatie: afhankelijk van</div>
   <div class="field">
       
         <select name="entity.ouder.id">
