--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -146,7 +146,7 @@
           <a href="@{Statics.tips()}">Tips voor Gebruikers</a>
         </h3>
         <h3 class="ui-accordion-header ui-helper-reset ui-state-default ui-corner-all" role="tab" aria-expanded="false" aria-selected="false" tabindex="-1">
-          <a href="#">Wachtwoord vergeten?</a>
+          <a href="@{Statics.passforgot()}">Wachtwoord vergeten?</a>
         </h3>
         <h3 class="ui-accordion-header ui-helper-reset ui-state-default ui-corner-all" role="tab" aria-expanded="false" aria-selected="false" tabindex="-1">
           <a href="#">Handleiding in Word</a>
