--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -149,7 +149,7 @@
           <a href="@{Statics.passforgot()}">Wachtwoord vergeten?</a>
         </h3>
         <h3 class="ui-accordion-header ui-helper-reset ui-state-default ui-corner-all" role="tab" aria-expanded="false" aria-selected="false" tabindex="-1">
-          <a href="#">Handleiding in Word</a>
+          <a href="@{'/public/docs/ginger_online_handleiding.pdf'}" target="_blank">Handleiding in PDF</a>
         </h3>
       </div>
     </div>
